--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "prefix": "your prefix",
-  "token": "your token",
-  "owners": ["OWNER ID"],
+  "prefix": "s!",
+  "token": "MTAxNTgyODQ4NTIxNTg5OTcwOQ.Gk4QXJ.vyECASL5A-4YmDnEQl9iczJJzCzwn6PTtrL-9w",
+  "owners": ["1015787697735991326"],
   "footer": "NSFW Bot • is.gd/nsfwbot",
 
   "msg": {
